// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`apmUiEnabled 1`] = `
<EuiPanel
  paddingSize="l"
>
  <EuiFlexGroup>
    <EuiFlexItem>
      <EuiTitle>
        <h2>
          <FormattedMessage
            defaultMessage="Add Data to Kibana"
            id="kbn.home.addData.addDataToKibanaTitle"
            values={Object {}}
          />
        </h2>
      </EuiTitle>
      <EuiText
        size="s"
      >
        <p>
          <FormattedMessage
            defaultMessage="Use these solutions to quickly turn your data into pre-built dashboards and monitoring systems."
            id="kbn.home.addData.addDataToKibanaDescription"
            values={Object {}}
          />
        </p>
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer />
  <EuiFlexGroup
    className="homeAddData__flexGroup"
    gutterSize="l"
    justifyContent="spaceAround"
    responsive={false}
    wrap={true}
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiCard
        className="homAddData__card"
        description={
          <span
            id="aria-describedby.addAmpButtonLabel"
          >
            APM automatically collects in-depth performance metrics and errors from inside your applications.
          </span>
        }
        footer={
          <EuiButton
            aria-describedby="aria-describedby.addAmpButtonLabel"
            className="homAddData__button"
            href="#/home/tutorial/apm"
          >
            <FormattedMessage
              defaultMessage="Add APM"
              id="kbn.home.addData.apm.addApmButtonLabel"
              values={Object {}}
            />
          </EuiButton>
        }
        icon={
          <EuiIcon
            className="homAddData__icon"
            type="logoAPM"
          />
        }
        title="APM"
      />
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiCard
        className="homAddData__card"
        description={
          <span
            id="aria-describedby.addLogDataButtonLabel"
          >
            Ingest logs from popular data sources and easily visualize in preconfigured dashboards.
          </span>
        }
        footer={
          <EuiButton
            aria-describedby="aria-describedby.addLogDataButtonLabel"
            className="homAddData__button"
            href="#/home/tutorial_directory/logging"
          >
            <FormattedMessage
              defaultMessage="Add log data"
              id="kbn.home.addData.logging.addLogDataButtonLabel"
              values={Object {}}
            />
          </EuiButton>
        }
        icon={
          <EuiIcon
            className="homAddData__icon"
            type="logoLogging"
          />
        }
        title="Logs"
      />
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiCard
        className="homAddData__card"
        description={
          <span
            id="aria-describedby.addMetricsButtonLabel"
          >
            Collect metrics from the operating system and services running on your servers.
          </span>
        }
        footer={
          <EuiButton
            aria-describedby="aria-describedby.addMetricsButtonLabel"
            className="homAddData__button"
            href="#/home/tutorial_directory/metrics"
          >
            <FormattedMessage
              defaultMessage="Add metric data"
              id="kbn.home.addData.metrics.addMetricsDataButtonLabel"
              values={Object {}}
            />
          </EuiButton>
        }
        icon={
          <EuiIcon
            className="homAddData__icon"
            type="logoMetrics"
          />
        }
        title="Metrics"
      />
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiCard
        className="homAddData__card"
        description={
          <span
            id="aria-describedby.addSiemButtonLabel"
          >
            Centralize security events for interactive investigation in ready-to-go visualizations.
          </span>
        }
        footer={
          <EuiButton
            aria-describedby="aria-describedby.addSiemButtonLabel"
            className="homAddData__button"
            href="#/home/tutorial_directory/siem"
          >
            <FormattedMessage
              defaultMessage="Add security events"
              id="kbn.home.addData.siem.addSiemEventsButtonLabel"
              values={Object {}}
            />
          </EuiButton>
        }
        icon={
          <EuiIcon
            className="homAddData__icon"
            type="logoSecurity"
          />
        }
        title="SIEM"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiHorizontalRule />
  <EuiFlexGrid
    columns={2}
  >
    <EuiFlexItem
      className="homAddData__footerItem"
    >
      <EuiText
        size="s"
      >
        <strong
          style={
            Object {
              "height": 38,
            }
          }
        >
          <FormattedMessage
            defaultMessage="Add sample data"
            id="kbn.home.addData.sampleDataTitle"
            values={Object {}}
          />
        </strong>
        <EuiLink
          href="#/home/tutorial_directory/sampleData"
          style={
            Object {
              "display": "block",
              "textAlign": "center",
            }
          }
        >
          <FormattedMessage
            defaultMessage="Load a data set and a Kibana dashboard"
            id="kbn.home.addData.sampleDataLink"
            values={Object {}}
          />
        </EuiLink>
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      className="homAddData__footerItem"
    >
      <EuiText
        size="s"
      >
        <strong
          style={
            Object {
              "height": 38,
            }
          }
        >
          <FormattedMessage
            defaultMessage="Use Elasticsearch data"
            id="kbn.home.addData.yourDataTitle"
            values={Object {}}
          />
        </strong>
        <EuiLink
          href="#/management/kibana/index_pattern"
          style={
            Object {
              "display": "block",
              "textAlign": "center",
            }
          }
        >
          <FormattedMessage
            defaultMessage="Connect to your Elasticsearch index"
            id="kbn.home.addData.yourDataLink"
            values={Object {}}
          />
        </EuiLink>
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGrid>
</EuiPanel>
`;

exports[`isNewKibanaInstance 1`] = `
<EuiPanel
  paddingSize="l"
>
  <EuiFlexGroup>
    <EuiFlexItem>
      <EuiTitle>
        <h2>
          <FormattedMessage
            defaultMessage="Add Data to Kibana"
            id="kbn.home.addData.addDataToKibanaTitle"
            values={Object {}}
          />
        </h2>
      </EuiTitle>
      <EuiText
        size="s"
      >
        <p>
          <FormattedMessage
            defaultMessage="Use these solutions to quickly turn your data into pre-built dashboards and monitoring systems."
            id="kbn.home.addData.addDataToKibanaDescription"
            values={Object {}}
          />
        </p>
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer />
  <EuiFlexGroup
    className="homeAddData__flexGroup"
    gutterSize="l"
    justifyContent="spaceAround"
    responsive={false}
    wrap={false}
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiCard
        className="homAddData__card"
        description={
          <span
            id="aria-describedby.addLogDataButtonLabel"
          >
            Ingest logs from popular data sources and easily visualize in preconfigured dashboards.
          </span>
        }
        footer={
          <EuiButton
            aria-describedby="aria-describedby.addLogDataButtonLabel"
            className="homAddData__button"
            href="#/home/tutorial_directory/logging"
          >
            <FormattedMessage
              defaultMessage="Add log data"
              id="kbn.home.addData.logging.addLogDataButtonLabel"
              values={Object {}}
            />
          </EuiButton>
        }
        icon={
          <EuiIcon
            className="homAddData__icon"
            type="logoLogging"
          />
        }
        title="Logs"
      />
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiCard
        className="homAddData__card"
        description={
          <span
            id="aria-describedby.addMetricsButtonLabel"
          >
            Collect metrics from the operating system and services running on your servers.
          </span>
        }
        footer={
          <EuiButton
            aria-describedby="aria-describedby.addMetricsButtonLabel"
            className="homAddData__button"
            href="#/home/tutorial_directory/metrics"
          >
            <FormattedMessage
              defaultMessage="Add metric data"
              id="kbn.home.addData.metrics.addMetricsDataButtonLabel"
              values={Object {}}
            />
          </EuiButton>
        }
        icon={
          <EuiIcon
            className="homAddData__icon"
            type="logoMetrics"
          />
        }
        title="Metrics"
      />
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiCard
        className="homAddData__card"
        description={
          <span
            id="aria-describedby.addSiemButtonLabel"
          >
            Centralize security events for interactive investigation in ready-to-go visualizations.
          </span>
        }
        footer={
          <EuiButton
            aria-describedby="aria-describedby.addSiemButtonLabel"
            className="homAddData__button"
            href="#/home/tutorial_directory/siem"
          >
            <FormattedMessage
              defaultMessage="Add security events"
              id="kbn.home.addData.siem.addSiemEventsButtonLabel"
              values={Object {}}
            />
          </EuiButton>
        }
        icon={
          <EuiIcon
            className="homAddData__icon"
            type="logoSecurity"
          />
        }
        title="SIEM"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiHorizontalRule />
  <EuiFlexGrid
    columns={2}
  >
    <EuiFlexItem
      className="homAddData__footerItem homAddData__footerItem--highlight"
    >
      <EuiText
        size="s"
      >
        <strong
          style={
            Object {
              "height": 38,
            }
          }
        >
          <FormattedMessage
            defaultMessage="Add sample data"
            id="kbn.home.addData.sampleDataTitle"
            values={Object {}}
          />
        </strong>
        <EuiLink
          href="#/home/tutorial_directory/sampleData"
          style={
            Object {
              "display": "block",
              "textAlign": "center",
            }
          }
        >
          <FormattedMessage
            defaultMessage="Load a data set and a Kibana dashboard"
            id="kbn.home.addData.sampleDataLink"
            values={Object {}}
          />
        </EuiLink>
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      className="homAddData__footerItem homAddData__footerItem--highlight"
    >
      <EuiText
        size="s"
      >
        <strong
          style={
            Object {
              "height": 38,
            }
          }
        >
          <FormattedMessage
            defaultMessage="Use Elasticsearch data"
            id="kbn.home.addData.yourDataTitle"
            values={Object {}}
          />
        </strong>
        <EuiLink
          href="#/management/kibana/index_pattern"
          style={
            Object {
              "display": "block",
              "textAlign": "center",
            }
          }
        >
          <FormattedMessage
            defaultMessage="Connect to your Elasticsearch index"
            id="kbn.home.addData.yourDataLink"
            values={Object {}}
          />
        </EuiLink>
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGrid>
</EuiPanel>
`;

exports[`mlEnabled 1`] = `
<EuiPanel
  paddingSize="l"
>
  <EuiFlexGroup>
    <EuiFlexItem>
      <EuiTitle>
        <h2>
          <FormattedMessage
            defaultMessage="Add Data to Kibana"
            id="kbn.home.addData.addDataToKibanaTitle"
            values={Object {}}
          />
        </h2>
      </EuiTitle>
      <EuiText
        size="s"
      >
        <p>
          <FormattedMessage
            defaultMessage="Use these solutions to quickly turn your data into pre-built dashboards and monitoring systems."
            id="kbn.home.addData.addDataToKibanaDescription"
            values={Object {}}
          />
        </p>
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer />
  <EuiFlexGroup
    className="homeAddData__flexGroup"
    gutterSize="l"
    justifyContent="spaceAround"
    responsive={false}
    wrap={true}
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiCard
        className="homAddData__card"
        description={
          <span
            id="aria-describedby.addAmpButtonLabel"
          >
            APM automatically collects in-depth performance metrics and errors from inside your applications.
          </span>
        }
        footer={
          <EuiButton
            aria-describedby="aria-describedby.addAmpButtonLabel"
            className="homAddData__button"
            href="#/home/tutorial/apm"
          >
            <FormattedMessage
              defaultMessage="Add APM"
              id="kbn.home.addData.apm.addApmButtonLabel"
              values={Object {}}
            />
          </EuiButton>
        }
        icon={
          <EuiIcon
            className="homAddData__icon"
            type="logoAPM"
          />
        }
        title="APM"
      />
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiCard
        className="homAddData__card"
        description={
          <span
            id="aria-describedby.addLogDataButtonLabel"
          >
            Ingest logs from popular data sources and easily visualize in preconfigured dashboards.
          </span>
        }
        footer={
          <EuiButton
            aria-describedby="aria-describedby.addLogDataButtonLabel"
            className="homAddData__button"
            href="#/home/tutorial_directory/logging"
          >
            <FormattedMessage
              defaultMessage="Add log data"
              id="kbn.home.addData.logging.addLogDataButtonLabel"
              values={Object {}}
            />
          </EuiButton>
        }
        icon={
          <EuiIcon
            className="homAddData__icon"
            type="logoLogging"
          />
        }
        title="Logs"
      />
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiCard
        className="homAddData__card"
        description={
          <span
            id="aria-describedby.addMetricsButtonLabel"
          >
            Collect metrics from the operating system and services running on your servers.
          </span>
        }
        footer={
          <EuiButton
            aria-describedby="aria-describedby.addMetricsButtonLabel"
            className="homAddData__button"
            href="#/home/tutorial_directory/metrics"
          >
            <FormattedMessage
              defaultMessage="Add metric data"
              id="kbn.home.addData.metrics.addMetricsDataButtonLabel"
              values={Object {}}
            />
          </EuiButton>
        }
        icon={
          <EuiIcon
            className="homAddData__icon"
            type="logoMetrics"
          />
        }
        title="Metrics"
      />
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiCard
        className="homAddData__card"
        description={
          <span
            id="aria-describedby.addSiemButtonLabel"
          >
            Centralize security events for interactive investigation in ready-to-go visualizations.
          </span>
        }
        footer={
          <EuiButton
            aria-describedby="aria-describedby.addSiemButtonLabel"
            className="homAddData__button"
            href="#/home/tutorial_directory/siem"
          >
            <FormattedMessage
              defaultMessage="Add security events"
              id="kbn.home.addData.siem.addSiemEventsButtonLabel"
              values={Object {}}
            />
          </EuiButton>
        }
        icon={
          <EuiIcon
            className="homAddData__icon"
            type="logoSecurity"
          />
        }
        title="SIEM"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiHorizontalRule />
  <EuiFlexGrid
    columns={3}
  >
    <EuiFlexItem
      className="homAddData__footerItem"
    >
      <EuiText
        size="s"
      >
        <strong
          style={
            Object {
              "height": 38,
            }
          }
        >
          <FormattedMessage
            defaultMessage="Add sample data"
            id="kbn.home.addData.sampleDataTitle"
            values={Object {}}
          />
        </strong>
        <EuiLink
          href="#/home/tutorial_directory/sampleData"
          style={
            Object {
              "display": "block",
              "textAlign": "center",
            }
          }
        >
          <FormattedMessage
            defaultMessage="Load a data set and a Kibana dashboard"
            id="kbn.home.addData.sampleDataLink"
            values={Object {}}
          />
        </EuiLink>
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      className="homAddData__footerItem"
    >
      <EuiText
        size="s"
      >
        <strong
          style={
            Object {
              "height": 38,
            }
          }
        >
          <FormattedMessage
            defaultMessage="Upload data from log file"
            id="kbn.home.addData.uploadFileTitle"
            values={Object {}}
          />
        </strong>
        <EuiLink
          href="path/app/ml#/filedatavisualizer"
          style={
            Object {
              "display": "block",
              "textAlign": "center",
            }
          }
        >
          <FormattedMessage
            defaultMessage="Import a CSV, NDJSON, or log file"
            id="kbn.home.addData.uploadFileLink"
            values={Object {}}
          />
        </EuiLink>
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      className="homAddData__footerItem"
    >
      <EuiText
        size="s"
      >
        <strong
          style={
            Object {
              "height": 38,
            }
          }
        >
          <FormattedMessage
            defaultMessage="Use Elasticsearch data"
            id="kbn.home.addData.yourDataTitle"
            values={Object {}}
          />
        </strong>
        <EuiLink
          href="#/management/kibana/index_pattern"
          style={
            Object {
              "display": "block",
              "textAlign": "center",
            }
          }
        >
          <FormattedMessage
            defaultMessage="Connect to your Elasticsearch index"
            id="kbn.home.addData.yourDataLink"
            values={Object {}}
          />
        </EuiLink>
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGrid>
</EuiPanel>
`;

exports[`render 1`] = `
<EuiPanel
  paddingSize="l"
>
  <EuiFlexGroup>
    <EuiFlexItem>
      <EuiTitle>
        <h2>
          <FormattedMessage
            defaultMessage="Add Data to Kibana"
            id="kbn.home.addData.addDataToKibanaTitle"
            values={Object {}}
          />
        </h2>
      </EuiTitle>
      <EuiText
        size="s"
      >
        <p>
          <FormattedMessage
            defaultMessage="Use these solutions to quickly turn your data into pre-built dashboards and monitoring systems."
            id="kbn.home.addData.addDataToKibanaDescription"
            values={Object {}}
          />
        </p>
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer />
  <EuiFlexGroup
    className="homeAddData__flexGroup"
    gutterSize="l"
    justifyContent="spaceAround"
    responsive={false}
    wrap={false}
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiCard
        className="homAddData__card"
        description={
          <span
            id="aria-describedby.addLogDataButtonLabel"
          >
            Ingest logs from popular data sources and easily visualize in preconfigured dashboards.
          </span>
        }
        footer={
          <EuiButton
            aria-describedby="aria-describedby.addLogDataButtonLabel"
            className="homAddData__button"
            href="#/home/tutorial_directory/logging"
          >
            <FormattedMessage
              defaultMessage="Add log data"
              id="kbn.home.addData.logging.addLogDataButtonLabel"
              values={Object {}}
            />
          </EuiButton>
        }
        icon={
          <EuiIcon
            className="homAddData__icon"
            type="logoLogging"
          />
        }
        title="Logs"
      />
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiCard
        className="homAddData__card"
        description={
          <span
            id="aria-describedby.addMetricsButtonLabel"
          >
            Collect metrics from the operating system and services running on your servers.
          </span>
        }
        footer={
          <EuiButton
            aria-describedby="aria-describedby.addMetricsButtonLabel"
            className="homAddData__button"
            href="#/home/tutorial_directory/metrics"
          >
            <FormattedMessage
              defaultMessage="Add metric data"
              id="kbn.home.addData.metrics.addMetricsDataButtonLabel"
              values={Object {}}
            />
          </EuiButton>
        }
        icon={
          <EuiIcon
            className="homAddData__icon"
            type="logoMetrics"
          />
        }
        title="Metrics"
      />
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiCard
        className="homAddData__card"
        description={
          <span
            id="aria-describedby.addSiemButtonLabel"
          >
            Centralize security events for interactive investigation in ready-to-go visualizations.
          </span>
        }
        footer={
          <EuiButton
            aria-describedby="aria-describedby.addSiemButtonLabel"
            className="homAddData__button"
            href="#/home/tutorial_directory/siem"
          >
            <FormattedMessage
              defaultMessage="Add security events"
              id="kbn.home.addData.siem.addSiemEventsButtonLabel"
              values={Object {}}
            />
          </EuiButton>
        }
        icon={
          <EuiIcon
            className="homAddData__icon"
            type="logoSecurity"
          />
        }
        title="SIEM"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiHorizontalRule />
  <EuiFlexGrid
    columns={2}
  >
    <EuiFlexItem
      className="homAddData__footerItem"
    >
      <EuiText
        size="s"
      >
        <strong
          style={
            Object {
              "height": 38,
            }
          }
        >
          <FormattedMessage
            defaultMessage="Add sample data"
            id="kbn.home.addData.sampleDataTitle"
            values={Object {}}
          />
        </strong>
        <EuiLink
          href="#/home/tutorial_directory/sampleData"
          style={
            Object {
              "display": "block",
              "textAlign": "center",
            }
          }
        >
          <FormattedMessage
            defaultMessage="Load a data set and a Kibana dashboard"
            id="kbn.home.addData.sampleDataLink"
            values={Object {}}
          />
        </EuiLink>
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      className="homAddData__footerItem"
    >
      <EuiText
        size="s"
      >
        <strong
          style={
            Object {
              "height": 38,
            }
          }
        >
          <FormattedMessage
            defaultMessage="Use Elasticsearch data"
            id="kbn.home.addData.yourDataTitle"
            values={Object {}}
          />
        </strong>
        <EuiLink
          href="#/management/kibana/index_pattern"
          style={
            Object {
              "display": "block",
              "textAlign": "center",
            }
          }
        >
          <FormattedMessage
            defaultMessage="Connect to your Elasticsearch index"
            id="kbn.home.addData.yourDataLink"
            values={Object {}}
          />
        </EuiLink>
      </EuiText>
    </EuiFlexItem>
  </EuiFlexGrid>
</EuiPanel>
`;
